--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 spring.application.name=FilmCategorizationSystem
-
-
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/movies
 spring.datasource.username=postgres
-spring.datasource.password=demon
+spring.datasource.password=xxx
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-
-
 spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
 movie.localFilePath=D:/movies
-
 baseUrl=https://api.github.com
