--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
 movie.localFilePath=D:/movies
-baseUrl=https://api.github.com
+baseUrl=https://api.themoviedb.org
+
+api.key=d1c24bf2a1ec52faac9bc3ebdc203d5c
