--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=FilmCategorizationSystem
 spring.datasource.url=jdbc:postgresql://localhost:5432/movies
 spring.datasource.username=postgres
-spring.datasource.password=demon
+spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=1024MB
